# insight

./: insight.md
auth/: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  pyproject.toml
auth/app/: init_db.py  main.py
auth/app/application/admin/: schemas.py  use_cases.py
auth/app/application/oauth/: schemas.py  use_cases.py
auth/app/application/shared/: schemas.py  session_creator.py  token_issuer.py
auth/app/application/user/: schemas.py  use_cases.py
auth/app/core/: __init__.py  database.py  log_setup.py  settings.py
auth/app/core/exceptions/: base.py  exc_handlers.py
auth/app/domain/: entities.py  errors.py  ports.py
auth/app/infrastructure/: email_sender.py  security.py
auth/app/infrastructure/repos/: auth_code_repo.py  email_code_repo.py  permission_repo.py  relation_repo.py  role_repo.py  session_repo.py  token_repo.py  user_repo.py
auth/app/plugins/lifespan/: __init__.py  create_admin_user.py  init_database.py
auth/app/presentation/: deps.py
auth/app/presentation/admin/: router.py  schemas.py
auth/app/presentation/frontend/: __init__.py  router.py
auth/app/utils/: datetime_str.py
auth/configs/: .env  .env.example  config.yml
auth/platform/: index.html  package.json  vite.config.ts
auth/platform/src/: App.tsx  index.css  main.tsx
auth/sql/sqlite/: auth.sql
auth/web/: README.md  biome.json  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
auth/web/src/: App.tsx  index.css  main.tsx
dbmock/: Makefile  README.md  pyproject.toml
dbmock/core/: __init__.py  init_db.py
dbmock/core/entities/: warehouse.py
dbmock/core/generators/: __init__.py  main.py  settings.py
dbmock/sql/: warehouse.sql
insight-agent/: .gitignore  DOC.md  Makefile  README.md  pyproject.toml
insight-agent/app/: init_db.py  main.py
insight-agent/app/agent/: agent.py  mcp.py
insight-agent/app/core/: context.py  database.py  http_client.py  redis.py  settings.py
insight-agent/app/entities/: chat.py
insight-agent/app/errors/: __init__.py  attachment_error.py  auth_error.py  chat_error.py
insight-agent/app/mappers/: __init__.py  message_mapper.py
insight-agent/app/repositories/: __init__.py  context_compaction_repo.py  conversation_repo.py  message_repo.py  websocket_token_repo.py
insight-agent/app/routers/: __init__.py  frontend.py
insight-agent/app/schemas/: __init__.py  auth_schema.py  chat_schema.py
insight-agent/app/services/: chat_service.py
insight-agent/configs/: .env  .env.example  config.yml
insight-agent/docker/: docker-compose.yaml
insight-agent/sql/mysql/: chat.sql
insight-agent/web/: biome.json  index.html  package.json  tailwind.config.js  vite.config.ts
insight-agent/web/src/: App.tsx  index.css
(+231 files in other folders)
