[project]
dependencies = [
  "asyncmy>=0.2.11",
  "faker>=37.0.0",
  "loguru>=0.7.3",
  "pydantic>=2.12.5",
  "pymysql>=1.1.2",
  "rich>=14.3.3",
  "sqlacodegen>=4.0.2",
  "sqlalchemy>=2.0.48",
]
description = "用于生成电商数仓模拟数据的工具"
name = "dbmock"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"
