[project]
name = "insight-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asyncmy>=0.2.11",
  "deepagents>=0.4.7",
  "fastapi[standard]>=0.135.1",
  "langchain-mcp-adapters>=0.2.1",
  "langchain-openai>=1.1.7",
  "loguru>=0.7.3",
  "omegaconf>=2.3.0",
  "openai>=2.16.0",
  "pandas>=3.0.1",
  "pdfplumber>=0.11.9",
  "pymysql>=1.1.2",
  "pypdf>=6.8.0",
  "redis>=7.2.0",
  "sqlacodegen>=3.2.0",
  "sqlalchemy[asyncmy]>=2.0.46",
]

[dependency-groups]
dev = [
  "ruff>=0.15.16",
  "pyright>=1.1.410",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
